fixed font size & hover projects behaviour on mobile

--- a/src/app/container/Services/Services.scss
+++ b/src/app/container/Services/Services.scss
@@ -14,7 +14,6 @@
   justify-content: center;
   align-items: flex-start;
   flex-wrap: wrap;
-  margin-top: 3rem;
 }
 
 .app__profile-item--animation {
