--- a/src/app/container/Work/Work.scss
+++ b/src/app/container/Work/Work.scss
@@ -102,6 +102,16 @@
     opacity: 0;
     transition: all 0.3s ease;
 
+    @media (pointer: coarse) and (hover: none) {
+      opacity: 1;
+    }
+
+    @supports not ((pointer: coarse) or (hover: none)) {
+      @media only screen and (width< 70.25em) {
+        opacity: 1;
+      }
+    }
+
     div {
       width: 50px;
       height: 50px;
