--- a/src/app/styles/App.scss
+++ b/src/app/styles/App.scss
@@ -158,7 +158,7 @@
   }
 
   @media screen and (max-width: 450px) {
-    font-size: 0.9rem;
+    font-size: 1.3rem;
   }
 }
 
